# RavenWeather

./: .gitignore  Cargo.toml  README.MD
migrations/2021-10-19-110438_air/: down.sql  up.sql
migrations/2021-10-19-110441_weather/: up.sql
src/: config.rs  lib.rs  main.rs  models.rs  schema.rs
src/request/: air_pollution.rs  air_pollution_actualizer.rs  current_weather.rs  current_weather_actualizer.rs  mod.rs
