[package]
name = "raven_weather"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.5", features = ["json", "blocking"] }

serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"  

tokio = { version = "1", features = ["full"] }


diesel = { version = "1.4.8", features = [ "postgres"] }
dotenv = "0.15.0"
http = "0.2.5"
axum = "0.3.0"

